--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGODB_URL = mongodb+srv://user1:12345@logistics.ktvvi.mongodb.net/logistics?retryWrites=true&w=majority
+JWT_SECRET=30575339846c6388cfedbc8c062251c21d15b0ca
+JWT_EXPIRE=10min
